# Programming2

./: CMakeLists.txt  Curve.cpp  Curve.h  Dequeue.cpp  Dequeue.h  Dequeue.hpp  Limitation.cpp  Limitation.h  Piquet.cpp  Piquet.h  Piquet_Test.cpp  SingleLinkedList - отчет по языкам Программирования .odt  build.ninja  math.cpp  math.h
.cache/clangd/index/: Curve.cpp.63DC99A3F62B4615.idx  Curve.h.B33DB57EEAB17093.idx  Limitation.cpp.9CE5CC771D87CF64.idx  Limitation.h.32DE5ECBC98E37F6.idx  Piquet.cpp.9026AD80C9439A3B.idx  Piquet.h.AE6554B429F09936.idx  main.cpp.ED19F85E3AA4EA30.idx  math.cpp.8F0E7EAA4F64643E.idx  math.h.59F0C69CAA0FC0A8.idx
List/: List.cpp
List/List_beta/: Node.h  SingleList.cpp  SingleList.h  hello  main_list.cpp
ThirdSemester/: one_dimension_arr.cpp  one_dimension_arr.h  two_dimension_arr.cpp  two_dimension_arr.h
ThirdSemester/Exercise/: ArrayInsertZeros.cpp  ArrayInsertZeros.h  Exercise.h  Print.cpp
src/: CMakeLists.txt  main.cpp  miit
src/Dequeue/: CMakeLists.txt  Dequeue.cpp  Dequeue.h
src/Piquet/: CMakeLists.txt  Curve.cpp  Curve.h  Limitation.cpp  Limitation.h  Piquet.cpp  Piquet.h  math.h
test/: CMakeLists.txt
